# toggle

./: .gitattributes  .gitignore  .travis.yml  MANIFEST.in  Makefile  Message.py  MessageListener.py  Model.py  ModelLoader.py  Moose_thin.obj.mtl  Plate.py  Printer.py  README.md  Slicer.py  Toggle.py  VolumeStage.py  example.c  install-apt-packages.sh  install_data.py  plate_actor.c  plate_actor.h  requirements.txt  setup.cfg  setup.py  toggle  toggle.c  toggle.py  toggle.service  ui.json  update-toggle.py  updater.py  version.py  versioneer.py
Toggle.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
c/: 0.4mm-thin-wall.stl  Makefile  Makefile~  Moose_thin.stl  STL-loader-prototype.c  esShader.c  esShader.h  esUtil.c  esUtil.h  plate_actor.c  test_glesv2.c  toggle.c
c/plate_actor/: Makefile  main  main.c  plate_actor.c  plate_actor.h
clutter/: star_actor_1.py  suzanne.ply  toggle.json  toggle.py  ui.json
cogl/: hello-crate.c
configs/: default.cfg  kossel_mini.cfg  makerbot_cupcake.cfg  prusa_i3.cfg  thing-delta-1080p.cfg  thing-delta-720p.cfg  thing-delta-recore-720.cfg
debian/: changelog  control  gir1.2-toggle-0.5.install  libtoggle-0.4.install  libtoggle-dev.install  libtoggle1.install  postinst  prerm  rules  toggle.install
doc/: Layout_calculations.ods
etc/: style.css  ui.json
models/: calibration-cube.stl  missing-model.stl  plate_thing.ply  probe-point.stl  teapot.ply  treefrog.ply
python/: plate.py  toggle.py
scripts/: #uninstall.sh#  .#uninstall.sh  convert_all.sh  generate_all_styles.sh
scripts/styles/: convert.sh  generate_style.sh  grab.sh
style/: scale_ui.py  style.css  ui.json  ui_1920x1080.json  ui_800x480.json  ui_fluid.json
style/Base/: base.json  base.py  base_color_scheme.json  base_color_scheme.py  box_children.json  box_children.py  clutter_children.json  clutter_children.py  side0.py  side1.py  side2.py  side3.py  side_helpers.py  wifi_children.json  wifi_children.py
style/Mixer/: convert.sh  style.css  ui_1280x720.json  ui_1920x1080.json  ui_800x480.json
style/Plain/: style.css  ui_1280x720.json  ui_1920x1080.json  ui_800x480.json
style/Spitzy/: convert.sh  style.css  ui_1280x720.json  ui_1920x1080.json  ui_800x480.json
styles/Black/: ui_1280x720.json  ui_1920x1080.json  ui_800x480.json
styles/Dark/: style.css  ui_1280x720.json  ui_1920x1080.json  ui_800x480.json  ui_fluid.json  ui_fluid_jog.json  ui_fluid_settings.json
styles/Mixer/: ui_1280x720.json  ui_1920x1080.json  ui_800x480.json  ui_fluid.json  ui_fluid_jog.json
styles/Plain/: ui_1280x720.json  ui_1920x1080.json  ui_800x480.json  ui_fluid.json
styles/Spitzy/: ui_1280x720.json  ui_1920x1080.json  ui_800x480.json  ui_fluid.json
systemd/: toggle-x11.service  toggle.path  toggle.service  toggle.sh
test/: CubeTabs.py  cube-ui.json  jog-ui.json  show-wifi-networks.py  test-animation.py  test-cairo.py  test-custom-actor.py  test-graph.py  test-jog.py  test-keyboard.py  test-mash-light.py  test-mash-model.py  test-mash-only.py  test-mash-only.py.bak  test-mash.py  test-splash.py  test-threads.py  test-toggle-box.py  test-tornado.py  test-tornado.py.bak  test-touch.py  test-ui.py  ui-keyboard.json  ui-threads.json  ui.json
test/c/: test-touch.c
test/style/: style.css  ui-cube.json  ui.json  ui_1280x1024.json
tests/: README.md  __init__.py  conftest.py  requirements.txt  test_CascadingConfigParser.py  test_RestClient.py  test_ui_files.py
tests/conformance/: README.md  __init__.py  conftest.py  test_bidirectional_cycle.py  test_cascading_config_parser.py  test_connman.py  test_graph_plot.py  test_model_loader.py  test_network.py  test_network_manager.py  test_rest_client.py  test_ui_files.py  test_websocks_client.py
tests/interactive/: CubeTabs.py  cube-ui.json  keyboard.css  test-cairo.py  test-cube-tabs.py  test-fluid-box-ui.py  test-fluid-grid-ui.py  test-keyboard.py  test-mash-light.py  test-mash-only.py  test-splash.py  (+8 more)
toggle/: CascadingConfigParser.py  CascadingConfigParser.py.bak  CubeTabs.py  Event.py  FilamentGraph.py  FilamentGraph.py.bak  Graph.py  Graph.py.bak  Jog.py  Makefile  Message.py  MessageListener.py  Model 2.py  Model.py  ModelLoader.py  Network.py  Plate.py  Printer.py  RestClient.py  RestClient.py.bak  SecretAgent.py  Settings.py  Settings.py.bak  Slicer.py  SocksClient.py  Splash.py  StyleLoader.py  TemperatureGraph.py  Toggle.py  Toggle.py.bak  VolumeStage 2.py  VolumeStage.py  VolumeStage.py.bak  WebSocksClient.py  __init__.py  _version.py  jogtest.py  pkg_resources  toggle-model.c  toggle-model.h  (+2 more)
toggle-lib/: AUTHORS  Makefile  Makefile.am  NEWS  README  Toggle-0.1.gir  Toggle-0.1.typelib  configure.ac  libtoggle.la  toggle-box.h  toggle-model.c  toggle-model.h  toggle-model.lo  toggle-plate.h  toggle-plate.lo  toggle.pc.in
toggle-lib/.libs/: libtoggle.la  libtoggle.lai  libtoggle.so.0  libtoggle.so.0.0.0
toggle-lib/toggle/: Makefile.am  toggle-box.c  toggle-model.c  toggle-model.h
toggle-plate/: Makefile  Makefile~  toggle-plate.c  toggle-plate.h
(+23 files in other folders)
